<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lobby"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
            android:id="@+id/usernamelbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hostname"
        android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ServerCodeLbl"
            android:text="@string/sample"
            android:layout_marginBottom="10dp"/>
        <ListView
            android:id="@+id/playerlist"
            android:layout_width="200dp"
            android:layout_height="500dp"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/VoteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Start"
                android:layout_marginRight="5dp"/>
            <Button
                android:id="@+id/QuitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Quit"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
</LinearLayout>