<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainLogin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="100dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/title"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="150dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/title2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="200dp"
            >
            <EditText
                android:id="@+id/UsernameTxt"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="10"
                android:autofillHints="username"
                android:inputType="textPersonName"
                android:hint="@string/hintUsername"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="255dp"
            >
            <EditText
                android:id="@+id/ServerTxt"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/hintServercode"
                android:autofillHints="none"
                android:inputType="textPersonName"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="310dp"
            >
            <Button
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:id="@+id/LoginBtn"
                android:text="@string/joinServer"
                android:layout_marginRight="5dp"></Button>
            <Button
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:id="@+id/CreateBtn"
                android:text="@string/createServer"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"></Button>

        </LinearLayout>
</FrameLayout>