<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Config"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginTop="25dp"
    >
    <!--TODO: deciding on what settings we need besides time for each round-->
            <TextView
                android:id="@+id/Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amountOP"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    android:id="@+id/radio_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:textColor="@color/white"/>
                <RadioButton
                    android:id="@+id/radio_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4"
                    android:textColor="@color/white"/>
                <RadioButton
                    android:id="@+id/radio_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:textColor="@color/white"/>
                <RadioButton
                    android:id="@+id/radio_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6"
                    android:textColor="@color/white"/>
                <RadioButton
                    android:id="@+id/radio_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7"
                    android:textColor="@color/white"/>
            </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Switch
                android:id="@+id/SpyCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/spycount"
                android:textColor="@color/white" />
            <TextView
                android:layout_marginLeft="20dp"
                android:id="@+id/AmountTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Onespy"/>
        </LinearLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"/>

    <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:id="@+id/UpdateNOP"/>
</LinearLayout>